feat - 상품 동적 검색 조건 조회 ( 상품명, 가격이상 , 가격이하 및 정렬 , 페이징 처리 ) by QueryDsl OrderSpecifier

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #  show_sql: true
+        show_sql: true
         format_sql: true
         use_sql_comments: true # sql 과 함께 jpql 주석처리되어  콘솔창에 출력
 
