--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
+    //aop
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 
     //Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa'
